# gir_ffi

./: .autotest  .bnsignore  .gitignore  .metrics  .overcommit.yml  .pullreview.yml  .reek.yml  .rubocop.yml  .rubocop_todo.yml  .simplecov  .travis.yml  .yardopts  CONTRIBUTING.md  Changelog.md  DESIGN.md  DESIGN.rdoc  Dockerfile  Gemfile  Guardfile  History.txt  Manifest.txt  README.md  README.rdoc  Rakefile  TODO.md  TODO.rdoc  exceptions.reek  gir_ffi-ruby1.8.supp  gir_ffi-ruby1.9.1.supp  gir_ffi.gemspec  gir_ffi.watchr  test-gir.rb  test-using-gir-builder.rb  test-using-gir.rb  test.rb
.github/workflows/: ruby.yml
doc/: dependency_decisions.yml
docs/: Documentation.md  Subclassing.md
examples/: 01_empty_window.rb  02_hello_world.rb  03_upgraded_hello_world.rb  04_webkit.rb  05_notification.rb  clutter.rb  demo_ffi_inherited_layout.rb  demo_ffi_nested_struct.rb  demo_ffi_safe_inherited_layout.rb  glib2_check_version.rb  hard_coded.rb  leak_test.rb  main_loop.rb  print_class.rb  simple_ffi_struct.rb  test_ffi_struct.rb
features/: conflicting_modules.feature  interrupt.feature  loading_dependencies.feature  stubbing_and_calling_methods.feature
features/step_definitions/: waiting.rb
lib/: ffi-glib-base.rb  ffi-glib.rb  ffi-gobject-base.rb  ffi-gobject.rb  ffi-gobject_introspection.rb  ffi-gtk2.rb  ffi-gtk3.rb  gir-ffi.rb  gir_ffi-base.rb  gir_ffi-builder.rb  gir_ffi.rb  girepository.rb  girffi.rb
lib/ffi-glib/: array.rb  array_methods.rb  boolean.rb  byte_array.rb  bytes.rb  container_class_methods.rb  destroy_notify.rb  error.rb  hash_table.rb  iconv.rb  list.rb  list_class_methods.rb  list_instance_methods.rb  list_methods.rb  main_loop.rb  ptr_array.rb  s_list.rb  sized_array.rb  strv.rb  variant.rb
lib/ffi-gobject/: base.rb  closure.rb  helper.rb  initially_unowned.rb  object.rb  object_class.rb  param_spec.rb  ruby_closure.rb  ruby_style.rb  value.rb
lib/ffi-gobject_introspection/: g_error.rb  gobject_lib.rb  gobject_type_init.rb  i_arg_info.rb  i_base_info.rb  i_callable_info.rb  i_callback_info.rb  i_constant_info.rb  i_enum_info.rb  i_field_info.rb  i_flags_info.rb  i_function_info.rb  i_interface_info.rb  i_object_info.rb  i_property_info.rb  i_registered_type_info.rb  i_repository.rb  i_signal_info.rb  i_struct_info.rb  i_type_info.rb  i_union_info.rb  i_unresolved_info.rb  i_value_info.rb  i_vfunc_info.rb  lib.rb  strv.rb
lib/ffi-gtk/: base.rb
lib/gir_ffi/: allocation_helper.rb  arg_helper.rb  argument_builder.rb  array_element_convertor.rb  base.rb  base_argument_builder.rb  boolean.rb  boxed_base.rb  builder.rb  builder_helper.rb  callback.rb  callback_base.rb  callback_helper.rb  class_base.rb  class_builder.rb  core.rb  enum_base.rb  enum_like_base.rb  error_argument_builder.rb  error_argument_info.rb  error_type_info.rb  ffi_ext.rb  field_argument_info.rb  field_builder.rb  flags_base.rb  function_builder.rb  function_definition_builder.rb  g_object.rb  g_type.rb  glib_error.rb  i_arg_info.rb  i_base_info.rb  i_callable_info.rb  i_callback_info.rb  i_constant_info.rb  i_enum_info.rb  i_error_domain_info.rb  i_field_info.rb  i_flags_info.rb  i_function_info.rb  (+58 more)
lib/gir_ffi-base/: class_base.rb  glib.rb  gobject.rb  type_map.rb
lib/girepository/: builder.rb  iarginfo.rb  ibase_info.rb  ibaseinfo.rb  icallableinfo.rb  iconstantinfo.rb  ienuminfo.rb  ifieldinfo.rb  iflagsinfo.rb  ifunctioninfo.rb  iinterfaceinfo.rb  iobjectinfo.rb  ipropertyinfo.rb  irepository.rb  isignalinfo.rb  istructinfo.rb  itypeinfo.rb  iunioninfo.rb  ivfuncinfo.rb  lib.rb
lib/girffi/: allocation_helper.rb  arg_helper.rb  builder.rb  builder_helper.rb  class_builder.rb  constructor_definition_builder.rb  function_definition_builder.rb  g_error.rb  g_type.rb  gerror.rb  i_arg_info.rb  i_callable_info.rb  i_callback_info.rb  i_constant_info.rb  i_repository.rb  i_struct_info.rb  i_type_info.rb  i_value_info.rb  iarginfo.rb  ibaseinfo.rb  icallableinfo.rb  icallbackinfo.rb  iconstantinfo.rb  ienuminfo.rb  ifieldinfo.rb  iflagsinfo.rb  ifunctioninfo.rb  iinterfaceinfo.rb  iobjectinfo.rb  ipropertyinfo.rb  iregisteredtypeinfo.rb  irepository.rb  isignalinfo.rb  istructinfo.rb  itypeinfo.rb  iunioninfo.rb  ivalueinfo.rb  ivfuncinfo.rb  lib.rb  lib_c.rb  (+3 more)
tasks/: bones.rake  manifest.rake  metric_fu.rake  notes.rake  post_load.rake  rdoc.rake  setup.rb  test.rake  valgrind.rake  yardoc.rake  zentest.rake
test/: .rubocop.yml  arg_helper_test.rb  base_test.rb  base_test_helper.rb  builder_test.rb  class_base_test.rb  class_builder_test.rb  constructor_definition_builder_test.rb  dynamic_type_builder_test.rb  everything_test.rb  ffi-gobject_test.rb  function_definition_builder_test.rb  g_object_overrides_test.rb  g_object_test.rb  g_type_test.rb  generated_everything_test.rb  generated_gimarshallingtests_test.rb  generated_gio_test.rb  generated_gobject_test.rb  generated_gtk_test.rb  generated_regress_test.rb  gir_ffi_test.rb  gir_ffi_test_helper.rb  girffi_test.rb  glib_overrides_test.rb  gobject_overrides_test.rb  gtk_overrides_test.rb  gtk_test.rb  gtype_test.rb  helper.rb  i_object_info_test.rb  i_repository_test.rb  interface_type_builder_test.rb  introspection_test_helper.rb  irepository_test.rb  module_builder_test.rb  object_type_builder_test.rb  test_builder.rb  test_helper.rb  test_irepository.rb  (+2 more)
test/builder/: function_definition_test.rb
test/ffi-glib/: array_test.rb  boolean_test.rb  byte_array_test.rb  bytes_test.rb  closure_test.rb  destroy_notify_test.rb  glib_overrides_test.rb  hash_table_test.rb  iconv_test.rb  list_test.rb  main_loop_test.rb  ptr_array_test.rb  ruby_closure_test.rb  s_list_test.rb  sized_array_test.rb  strv_test.rb  variant_test.rb
test/ffi-gobject/: closure_test.rb  g_object_overrides_test.rb  gobject_test.rb  helper_test.rb  object_class_test.rb  object_test.rb  param_spec_test.rb  ruby_closure_test.rb  ruby_style.rb  ruby_style_test.rb  value_test.rb
test/ffi-gobject-base/: gobject_test.rb
test/ffi-gobject_introspection/: gobject_type_init_test.rb  (+15 more)
test/lib/: Makefile.am  autogen.sh  configure.ac
yard-plugin/: setup.rb
(+282 files in other folders)
